# Narrate

./: .gitignore  LICENSE  README.md  app.py  pyproject.toml  requirements.txt  setup_fish_speech.sh
static/: index.html
tests/: test_api.py  test_integration.py
